# BitScrib

./: CMakeLists.txt  README.md
src/: BitScrib.cpp  BitScrib.h
